feat: add XSYU login utility and one-key sign implementation